<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_go_back" android:orderInCategory="100" android:title="@string/action_go_back" android:onClick="goBackButtonClicked" appcompat:showAsAction="never"/>
    <item android:id="@+id/action_go_forward" android:orderInCategory="101" android:title="@string/action_go_forward" android:onClick="goForwardButtonClicked" appcompat:showAsAction="never"/>
    <item android:id="@+id/action_share" android:orderInCategory="102" android:title="@string/action_share" android:onClick="shareButtonClicked" appcompat:showAsAction="never"/>
    <item android:id="@+id/action_reload" android:orderInCategory="103" android:title="@string/action_reload" android:onClick="reloadButtonClicked" appcompat:showAsAction="never"/>
    <item android:id="@+id/action_close" android:orderInCategory="104" android:title="@string/action_close" android:onClick="closeButtonClicked" appcompat:showAsAction="never"/>
    <item android:id="@+id/menu_search" android:visible="false" android:title="@string/menu_search" appcompat:actionViewClass="android.widget.SearchView" appcompat:showAsAction="ifRoom|withText"/>
</menu>
